--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: java
 jdk:
 - openjdk12
+
+addons: 
+ sonarcloud:
+  organization: Z 
+  token:
+   secure: b49a8486df1c21342998f882a94c924108582cc5
+
 script:
 - cd Test
 - ant build
+ sonar-scanner
+
