--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 
 addons: 
  sonarcloud:
-  organization: Z 
+  organization: simonefesta
   token:
    secure: b49a8486df1c21342998f882a94c924108582cc5
 
