--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ addons:
    secure: "b49a8486df1c21342998f882a94c924108582cc5"
 
 script:
-- ant build
 - sonar-scanner
-
+- cd Test
+- ant build
 
 
