--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
-sonar.projectKey=simonefesta_TryTravis2
-sonar.projectName=TryTravis2
+sonar.projectKey=simonefesta_TryTravis
+sonar.projectName=TryTravis
 
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/simonefesta/TryTravis2
-sonar.links.ci=https://travis-ci.org/simonefesta/TryTravis2
-sonar.links.scm=https://github.com/simonefesta/TryTravis2
-sonar.links.issue=https://github.com/simonefesta/TryTravis2/issues
+sonar.links.homepage=https://github.com/simonefesta/TryTravis
+sonar.links.ci=https://travis-ci.org/simonefesta/TryTravis
+sonar.links.scm=https://github.com/simonefesta/TryTravis
+sonar.links.issue=https://github.com/simonefesta/TryTravis/issues
 
 
 # =====================================================
